<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/purple_500">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ĐĂNG KÝ NHẬN THÔNG TIN"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Đăng ký nhận bản tin để nhận ưu đãi đặc biệt về sản phẩm ND Fresh"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"
        android:lineHeight="24dp"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_nd"
        android:layout_marginTop="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Website thương mại điện tử ND Fresh do ND Group là đơn vị chủ quản, chịu trách nhiệm và thực hiện các giao dịch liên quan mua sắm sản phẩm hàng hoá tiêu dùng thiết yếu."
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_marginTop="12dp"
        android:lineHeight="24dp"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="LIÊN HỆ VỚI CHÚNG TÔI"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/footer_address"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/footer_phone"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/footer_email"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"/>

</LinearLayout>